add a helpful api
